--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <title>GitFlow</title>
 </head>
 <body>
-  <h1>GitFlowを学ぼう</h1>
+  <header>
+    <h1>GitFlowを学ぼう</h1>
+    <ul>
+      <li>アイテム1</li>
+      <li>アイテム2</li>
+      <li>アイテム3</li>
+    </ul>
+  </header>
 </body>
 </html>
