--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       <li>アイテム3</li>
     </ul>
   </header>
-  <footer>&copy;</footer>
+  <section>
+    <h3>コンテンツ1</h3>
+    <p>あいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえお</p>
+  </section>
+  <footer>
+    &copy;
+  </footer>
 </body>
 </html>
