--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     <h3>コンテンツ1</h3>
     <p>あいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえお</p>
   </section>
+  <section>
+    <h3>コンテンツ2</h3>
+    <p>かきくけこかきくけこかきくけこかきくけこかきくけこかきくけこかきくけこかきくけこかきくけこ</p>
+  </section>
+  <section>
+    <h3>コンテンツ3</h3>
+    <p>さしすせそさしすせそさしすせそさしすせそさしすせそさしすせそさしすせそさしすせそさしすせそ</p>
+  </section>
   <footer>
     &copy;
   </footer>
