--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>GitFlow</title>
 </head>
 <body>
+  <!-- ヘッダー -->
   <header>
     <h1>GitFlowを学ぼう</h1>
     <ul>
@@ -15,6 +16,7 @@
       <li>アイテム3</li>
     </ul>
   </header>
+  <!-- サイトメイン -->
   <section>
     <h3>コンテンツ1</h3>
     <p>あいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえおあいうえお</p>
@@ -27,6 +29,7 @@
     <h3>コンテンツ3</h3>
     <p>さしすせそさしすせそさしすせそさしすせそさしすせそさしすせそさしすせそさしすせそさしすせそ</p>
   </section>
+  <!-- フッター -->
   <footer>
     &copy;
   </footer>
